--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,31 +13,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-20 Wed 19:00]
+#+CAPTION: Clock summary at [2019-02-20 Wed 20:08]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *207:17* |        |        | 100.0 |
+| *Total time*                                              | *207:40* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 207:17   |        |        | 100.0 |
-| Active                                                    |          | 207:17 |        | 100.0 |
+| Stories                                                   | 207:40   |        |        | 100.0 |
+| Active                                                    |          | 207:40 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   1.0 |
 | Sprint and product backlog grooming                       |          |        |   5:13 |   2.5 |
-| Work on MASD theory                                       |          |        | 113:38 |  54.8 |
+| Work on MASD theory                                       |          |        | 113:38 |  54.7 |
 | Rename models to fit MASD architecture                    |          |        |   4:56 |   2.4 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors                |          |        |   6:27 |   3.1 |
-| Create the =orchestration= model                          |          |        |   4:15 |   2.1 |
+| Create the =orchestration= model                          |          |        |   4:15 |   2.0 |
 | Update vcpkg across all operative systems                 |          |        |   4:35 |   2.2 |
 | Update C# reference models to latest dogen                |          |        |   0:42 |   0.3 |
 | Convert the utility model into a regular dogen model      |          |        |   7:27 |   3.6 |
 | Improve support for clang-cl builds                       |          |        |   2:02 |   1.0 |
-| Move generation properties into meta-data                 |          |        |   9:26 |   4.6 |
+| Move generation properties into meta-data                 |          |        |   9:26 |   4.5 |
 | Disabling facet globally and enabling locally fails       |          |        |   2:21 |   1.1 |
 | References to types in top-level namespace do not resolve |          |        |   0:51 |   0.4 |
 | Create a colour palette test model                        |          |        |   1:09 |   0.6 |
 | Great meta-data rename                                    |          |        |   4:54 |   2.4 |
-| Create a single binary for all of dogen                   |          |        |  29:10 |  14.1 |
+| Create a single binary for all of dogen                   |          |        |  29:33 |  14.2 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.4 |
 | Fix clang-cl warnings                                     |          |        |   5:07 |   2.5 |
 | Use tracing options in existing code                      |          |        |   0:57 |   0.5 |
@@ -731,6 +731,7 @@ its not clear if its MASD or dogen.
 
 *** STARTED Create a single binary for all of dogen                   :story:
     :LOGBOOK:
+    CLOCK: [2019-02-20 Wed 19:45]--[2019-02-20 Wed 20:08] =>  0:23
     CLOCK: [2019-02-20 Wed 18:41]--[2019-02-20 Wed 19:00] =>  0:19
     CLOCK: [2019-02-20 Wed 15:42]--[2019-02-20 Wed 18:40] =>  2:58
     CLOCK: [2019-02-20 Wed 15:34]--[2019-02-20 Wed 15:41] =>  0:07
