--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-20 Wed 20:08]
+#+CAPTION: Clock summary at [2019-02-21 Thu 10:06]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *207:40* |        |        | 100.0 |
+| *Total time*                                              | *209:08* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 207:40   |        |        | 100.0 |
-| Active                                                    |          | 207:40 |        | 100.0 |
+| Stories                                                   | 209:08   |        |        | 100.0 |
+| Active                                                    |          | 209:08 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   1.0 |
 | Sprint and product backlog grooming                       |          |        |   5:13 |   2.5 |
-| Work on MASD theory                                       |          |        | 113:38 |  54.7 |
+| Work on MASD theory                                       |          |        | 113:38 |  54.3 |
 | Rename models to fit MASD architecture                    |          |        |   4:56 |   2.4 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors                |          |        |   6:27 |   3.1 |
@@ -35,11 +35,11 @@
 | Move generation properties into meta-data                 |          |        |   9:26 |   4.5 |
 | Disabling facet globally and enabling locally fails       |          |        |   2:21 |   1.1 |
 | References to types in top-level namespace do not resolve |          |        |   0:51 |   0.4 |
-| Create a colour palette test model                        |          |        |   1:09 |   0.6 |
-| Great meta-data rename                                    |          |        |   4:54 |   2.4 |
-| Create a single binary for all of dogen                   |          |        |  29:33 |  14.2 |
+| Create a colour palette test model                        |          |        |   1:09 |   0.5 |
+| Great meta-data rename                                    |          |        |   4:54 |   2.3 |
+| Create a single binary for all of dogen                   |          |        |  31:01 |  14.8 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.4 |
-| Fix clang-cl warnings                                     |          |        |   5:07 |   2.5 |
+| Fix clang-cl warnings                                     |          |        |   5:07 |   2.4 |
 | Use tracing options in existing code                      |          |        |   0:57 |   0.5 |
 | Model references are not transitive                       |          |        |   0:21 |   0.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
@@ -731,6 +731,7 @@ its not clear if its MASD or dogen.
 
 *** STARTED Create a single binary for all of dogen                   :story:
     :LOGBOOK:
+    CLOCK: [2019-02-21 Thu 08:50]--[2019-02-21 Thu 10:06] =>  1:16
     CLOCK: [2019-02-20 Wed 20:09]--[2019-02-20 Wed 20:21] =>  0:12
     CLOCK: [2019-02-20 Wed 19:45]--[2019-02-20 Wed 20:08] =>  0:23
     CLOCK: [2019-02-20 Wed 18:41]--[2019-02-20 Wed 19:00] =>  0:19
@@ -788,6 +789,9 @@ Notes:
   boost visitor for each of the activities that calls each method.
 - move the hand-crafted configuration defaults in program options
   parser into configuration builder.
+- logs from generation get overridden with conversion
+- log should start with app details, including command line options so
+  we can see what command we're executing.
 
 *Merged Stories*
 
@@ -1672,7 +1676,7 @@ stereotypes during annotations processing. However, we should wait
 until we complete the exomodel work since that will remove scribble
 groups, etc. Its all in the annotations transform.
 
-*** Problems in tailor generation of dogen models                     :story:
+** Problems in tailor generation of dogen models                      :story:
 
 Regenerated all models, got the following errors:
 
