--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-21 Thu 10:06]
+#+CAPTION: Clock summary at [2019-02-21 Thu 10:27]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *209:08* |        |        | 100.0 |
+| *Total time*                                              | *209:28* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 209:08   |        |        | 100.0 |
-| Active                                                    |          | 209:08 |        | 100.0 |
+| Stories                                                   | 209:28   |        |        | 100.0 |
+| Active                                                    |          | 209:28 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   1.0 |
 | Sprint and product backlog grooming                       |          |        |   5:13 |   2.5 |
-| Work on MASD theory                                       |          |        | 113:38 |  54.3 |
+| Work on MASD theory                                       |          |        | 113:38 |  54.2 |
 | Rename models to fit MASD architecture                    |          |        |   4:56 |   2.4 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors                |          |        |   6:27 |   3.1 |
@@ -37,7 +37,7 @@
 | References to types in top-level namespace do not resolve |          |        |   0:51 |   0.4 |
 | Create a colour palette test model                        |          |        |   1:09 |   0.5 |
 | Great meta-data rename                                    |          |        |   4:54 |   2.3 |
-| Create a single binary for all of dogen                   |          |        |  31:01 |  14.8 |
+| Create a single binary for all of dogen                   |          |        |  31:21 |  15.0 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.4 |
 | Fix clang-cl warnings                                     |          |        |   5:07 |   2.4 |
 | Use tracing options in existing code                      |          |        |   0:57 |   0.5 |
@@ -731,6 +731,7 @@ its not clear if its MASD or dogen.
 
 *** STARTED Create a single binary for all of dogen                   :story:
     :LOGBOOK:
+    CLOCK: [2019-02-21 Thu 10:07]--[2019-02-21 Thu 10:27] =>  0:20
     CLOCK: [2019-02-21 Thu 08:50]--[2019-02-21 Thu 10:06] =>  1:16
     CLOCK: [2019-02-20 Wed 20:09]--[2019-02-20 Wed 20:21] =>  0:12
     CLOCK: [2019-02-20 Wed 19:45]--[2019-02-20 Wed 20:08] =>  0:23
