--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,31 +13,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-21 Thu 10:27]
+#+CAPTION: Clock summary at [2019-02-21 Thu 10:52]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *209:28* |        |        | 100.0 |
+| *Total time*                                              | *209:52* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 209:28   |        |        | 100.0 |
-| Active                                                    |          | 209:28 |        | 100.0 |
+| Stories                                                   | 209:52   |        |        | 100.0 |
+| Active                                                    |          | 209:52 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   1.0 |
 | Sprint and product backlog grooming                       |          |        |   5:13 |   2.5 |
-| Work on MASD theory                                       |          |        | 113:38 |  54.2 |
+| Work on MASD theory                                       |          |        | 113:38 |  54.1 |
 | Rename models to fit MASD architecture                    |          |        |   4:56 |   2.4 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors                |          |        |   6:27 |   3.1 |
 | Create the =orchestration= model                          |          |        |   4:15 |   2.0 |
 | Update vcpkg across all operative systems                 |          |        |   4:35 |   2.2 |
 | Update C# reference models to latest dogen                |          |        |   0:42 |   0.3 |
-| Convert the utility model into a regular dogen model      |          |        |   7:27 |   3.6 |
+| Convert the utility model into a regular dogen model      |          |        |   7:27 |   3.5 |
 | Improve support for clang-cl builds                       |          |        |   2:02 |   1.0 |
 | Move generation properties into meta-data                 |          |        |   9:26 |   4.5 |
 | Disabling facet globally and enabling locally fails       |          |        |   2:21 |   1.1 |
 | References to types in top-level namespace do not resolve |          |        |   0:51 |   0.4 |
 | Create a colour palette test model                        |          |        |   1:09 |   0.5 |
 | Great meta-data rename                                    |          |        |   4:54 |   2.3 |
-| Create a single binary for all of dogen                   |          |        |  31:21 |  15.0 |
+| Create a single binary for all of dogen                   |          |        |  31:45 |  15.1 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.4 |
 | Fix clang-cl warnings                                     |          |        |   5:07 |   2.4 |
 | Use tracing options in existing code                      |          |        |   0:57 |   0.5 |
@@ -731,6 +731,7 @@ its not clear if its MASD or dogen.
 
 *** STARTED Create a single binary for all of dogen                   :story:
     :LOGBOOK:
+    CLOCK: [2019-02-21 Thu 10:28]--[2019-02-21 Thu 10:52] =>  0:24
     CLOCK: [2019-02-21 Thu 10:07]--[2019-02-21 Thu 10:27] =>  0:20
     CLOCK: [2019-02-21 Thu 08:50]--[2019-02-21 Thu 10:06] =>  1:16
     CLOCK: [2019-02-20 Wed 20:09]--[2019-02-20 Wed 20:21] =>  0:12
