--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,18 +13,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-21 Thu 10:52]
+#+CAPTION: Clock summary at [2019-02-21 Thu 11:23]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *209:52* |        |        | 100.0 |
+| *Total time*                                              | *210:22* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 209:52   |        |        | 100.0 |
-| Active                                                    |          | 209:52 |        | 100.0 |
+| Stories                                                   | 210:22   |        |        | 100.0 |
+| Active                                                    |          | 210:22 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   1.0 |
 | Sprint and product backlog grooming                       |          |        |   5:13 |   2.5 |
-| Work on MASD theory                                       |          |        | 113:38 |  54.1 |
-| Rename models to fit MASD architecture                    |          |        |   4:56 |   2.4 |
+| Work on MASD theory                                       |          |        | 113:38 |  54.0 |
+| Rename models to fit MASD architecture                    |          |        |   4:56 |   2.3 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.5 |
 | Analyse the state of the mess of refactors                |          |        |   6:27 |   3.1 |
 | Create the =orchestration= model                          |          |        |   4:15 |   2.0 |
@@ -37,7 +37,7 @@
 | References to types in top-level namespace do not resolve |          |        |   0:51 |   0.4 |
 | Create a colour palette test model                        |          |        |   1:09 |   0.5 |
 | Great meta-data rename                                    |          |        |   4:54 |   2.3 |
-| Create a single binary for all of dogen                   |          |        |  31:45 |  15.1 |
+| Create a single binary for all of dogen                   |          |        |  32:15 |  15.3 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.4 |
 | Fix clang-cl warnings                                     |          |        |   5:07 |   2.4 |
 | Use tracing options in existing code                      |          |        |   0:57 |   0.5 |
@@ -731,6 +731,7 @@ its not clear if its MASD or dogen.
 
 *** STARTED Create a single binary for all of dogen                   :story:
     :LOGBOOK:
+    CLOCK: [2019-02-21 Thu 10:53]--[2019-02-21 Thu 11:23] =>  0:30
     CLOCK: [2019-02-21 Thu 10:28]--[2019-02-21 Thu 10:52] =>  0:24
     CLOCK: [2019-02-21 Thu 10:07]--[2019-02-21 Thu 10:27] =>  0:20
     CLOCK: [2019-02-21 Thu 08:50]--[2019-02-21 Thu 10:06] =>  1:16
@@ -913,6 +914,17 @@ the unique set of referenced models and load those. To put in this
 logic in the code at present (i.e. without a two-phase approach) would
 mean we'd have to load the same models several times (or heavily
 rewrite existing code, resulting in a two-phase approach, anyway).
+
+*** Add support for "directory mode" in conversion                    :story:
+
+The real use case we have for conversion is to point it to a directory
+with models and give it a destination "type" (e.g. json) and a output
+directory, and then have it convert all models to that type and place
+them in the output directory.
+
+A second but related use case is to point it to a model, supply a
+destination "type" and then output it into a directory, without having
+to supply a destination file.
 
 *** Add stereotype for IoC containers                                 :story:
 
@@ -1678,56 +1690,56 @@ stereotypes during annotations processing. However, we should wait
 until we complete the exomodel work since that will remove scribble
 groups, etc. Its all in the annotations transform.
 
-** Problems in tailor generation of dogen models                      :story:
+*** Problems in conversion of dogen models                            :story:
 
-Regenerated all models, got the following errors:
+ Regenerated all models, got the following errors:
 
-- we are adding the extension to the dia filename because of how CMake
-  works. We should probably remove the output parameter or at least
-  allow defaulting it to a replacement of the extension.
-- we are removing the dependencies due to duplicates in JSON keys.
-- we are looking for .dia diagrams instead of .json for references.
+ - we are adding the extension to the dia filename because of how CMake
+   works. We should probably remove the output parameter or at least
+   allow defaulting it to a replacement of the extension.
+ - we are removing the dependencies due to duplicates in JSON keys.
+ - we are looking for .dia diagrams instead of .json for references.
 
-*Previous Understanding*
+ *Previous Understanding*
 
-We converted all of dogen's models from dia into JSON using tailor and
-code-generated them to see if there were any differences.
+ We converted all of dogen's models from dia into JSON using tailor and
+ code-generated them to see if there were any differences.
 
-Issues to address:
+ Issues to address:
 
-- problems with =quilt.cpp= and =yarn.dia= / =yarn.json=: the
-  conversion of the model path did not work as expected - we do not
-  know of the "."  separator. Fixed it manually and then it all worked
-  (minus CMakeLists, see below). We could possibly fix the builder to
-  automatically use the "." to separate model paths. Actually with the
-  latest changes we now seem to only be looking at the first model
-  module, so for =yarn.dia= we only have =yarn=.
-- CMakeLists were deleted on all models for some reason, even though
-  the annotations profile look correct.
-- in quilt we correctly generated the forward declarations for
-  registrar error and workflow error without including boost
-  exception. Not sure why that is, nor why it is that we are including
-  them for forward declarations.
-- Missing include of registrar serialisation in
-  =all_ser.hpp=. Instability in =registrar_ser.cpp=, but content is
-  correct otherwise.
-- =database.json= generated invalid JSON.
-- references in dia diagrams have the dia extension. This means that
-  they do not resolve when converted to JSON.
+ - problems with =quilt.cpp= and =yarn.dia= / =yarn.json=: the
+   conversion of the model path did not work as expected - we do not
+   know of the "."  separator. Fixed it manually and then it all worked
+   (minus CMakeLists, see below). We could possibly fix the builder to
+   automatically use the "." to separate model paths. Actually with the
+   latest changes we now seem to only be looking at the first model
+   module, so for =yarn.dia= we only have =yarn=.
+ - CMakeLists were deleted on all models for some reason, even though
+   the annotations profile look correct.
+ - in quilt we correctly generated the forward declarations for
+   registrar error and workflow error without including boost
+   exception. Not sure why that is, nor why it is that we are including
+   them for forward declarations.
+ - Missing include of registrar serialisation in
+   =all_ser.hpp=. Instability in =registrar_ser.cpp=, but content is
+   correct otherwise.
+ - =database.json= generated invalid JSON.
+ - references in dia diagrams have the dia extension. This means that
+   they do not resolve when converted to JSON.
 
-"Script":
+ "Script":
 
-#+begin_src
+ #+begin_src
 rm *.json
 A="dia knit quilt.cpp wale yarn.json annotations formatters quilt yarn database options stitch yarn.dia"
 for a in $A; do /home/marco/Development/DomainDrivenConsulting/dogen/build/output/gcc/Release/stage/bin/dogen.tailor -t $a.dia -o $a.json; done
 for a in $A; do /home/marco/Development/DomainDrivenConsulting/dogen/build/output/gcc/Release/stage/bin/dogen.knitter -t ${a}.json --cpp-project-dir /home/marco/Development/DomainDrivenConsulting/dogen/projects --ignore-files-matching-regex .*/CMakeLists.txt --ignore-files-matching-regex .*/test/.* --ignore-files-matching-regex .*/tests/.* --verbose --delete-extra-files; done
-#+end_src
+ #+end_src
 
-In an ideal world, we should probably have a script that we run as
-part of =knit_and_stitch= that converts to tailor and then runs
-knitter on the models, so that we keep track of tailor breaks outside
-of JSON test models.
+ In an ideal world, we should probably have a script that we run as
+ part of =knit_and_stitch= that converts to tailor and then runs
+ knitter on the models, so that we keep track of tailor breaks outside
+ of JSON test models.
 
 *** Log file names do not have frontend                               :story:
 
