--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -13,40 +13,40 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-08 Fri 11:50]
+#+CAPTION: Clock summary at [2019-03-08 Fri 12:10]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *71:32* |       |       | 100.0 |
+| *Total time*                                                 | *71:51* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 71:32   |       |       | 100.0 |
-| Active                                                       |         | 71:32 |       | 100.0 |
+| Stories                                                      | 71:51   |       |       | 100.0 |
+| Active                                                       |         | 71:51 |       | 100.0 |
 | Edit release notes for previous sprint                       |         |       |  1:27 |   2.0 |
 | Sprint and product backlog grooming                          |         |       |  1:32 |   2.1 |
 | Implement text model generation chain in generation          |         |       |  3:45 |   5.2 |
 | Move generation model out of coding                          |         |       |  4:22 |   6.1 |
-| Rename endomodel to just model                               |         |       |  2:11 |   3.1 |
+| Rename endomodel to just model                               |         |       |  2:11 |   3.0 |
 | Remove exomodel remnants                                     |         |       |  0:03 |   0.1 |
 | Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   2.5 |
 | Split annotations processing into two phases                 |         |       |  3:10 |   4.4 |
-| Move injection processing out of coding                      |         |       | 18:39 |  26.1 |
+| Move injection processing out of coding                      |         |       | 18:39 |  26.0 |
 | Create a extraction model post-processing chain              |         |       |  0:56 |   1.3 |
 | Move coding to generation model transform into orchestration |         |       |  0:33 |   0.8 |
 | Add option for northwind tests                               |         |       |  0:54 |   1.3 |
 | Add DTL to vcpkg                                             |         |       |  5:15 |   7.3 |
-| Remove coding options                                        |         |       |  3:59 |   5.6 |
-| Add basic "diff mode"                                        |         |       | 12:02 |  16.8 |
+| Remove coding options                                        |         |       |  3:59 |   5.5 |
+| Add basic "diff mode"                                        |         |       | 12:02 |  16.7 |
 | Create a "run byproducts" directory                          |         |       |  1:01 |   1.4 |
 | Logging impact in tracing is blank                           |         |       |  0:50 |   1.2 |
 | Split operation reports from patches                         |         |       |  1:19 |   1.8 |
 | Add org mode support to diff reports                         |         |       |  1:13 |   1.7 |
 | Add dry mode                                                 |         |       |  0:27 |   0.6 |
+| Split extraction model generation from code generation       |         |       |  0:29 |   0.7 |
 | Rename the =transform= method to =apply=                     |         |       |  0:05 |   0.1 |
 | Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.5 |
 | Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.5 |
 | Update metrics in OpenHub                                    |         |       |  0:18 |   0.4 |
 | Rework the system tests using diff mode                      |         |       |  4:10 |   5.8 |
-| Split extraction model generation from code generation       |         |       |  0:10 |   0.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -877,6 +877,19 @@ With this option we will perform all the work in memory but not
 actually output generated code. It is intended to be used with diffing
 and tracing. Some activities may not support it (e.g. conversion?).
 
+*** COMPLETED Split extraction model generation from code generation  :story:
+    CLOSED: [2019-03-08 Fri 12:10]
+    :LOGBOOK:
+    CLOCK: [2019-03-08 Fri 11:51]--[2019-03-08 Fri 12:10] =>  0:19
+    CLOCK: [2019-03-08 Fri 11:40]--[2019-03-08 Fri 11:50] =>  0:10
+    :END:
+
+In order to make the models testable, we need access to the extraction
+model. However, we do not want to create a custom pipeline just for
+testing because we'd end up testing different things. Refactor the
+existing code such that the generation pipeline makes use of the
+extraction pipeline.
+
 *** STARTED Rename the =transform= method to =apply=                  :story:
     :LOGBOOK:
     CLOCK: [2019-03-04 Mon 18:25]--[2019-03-04 Mon 18:30] =>  0:05
@@ -987,17 +1000,6 @@ Notes:
   no writes or removes. prints out first 5 diffs to console.
 - enable diffing, reporting.
 - check how byproduct directory works with tests.
-
-*** STARTED Split extraction model generation from code generation    :story:
-    :LOGBOOK:
-    CLOCK: [2019-03-08 Fri 11:40]--[2019-03-08 Fri 11:50] =>  0:10
-    :END:
-
-In order to make the models testable, we need access to the extraction
-model. However, we do not want to create a custom pipeline just for
-testing because we'd end up testing different things. Refactor the
-existing code such that the generation pipeline makes use of the
-extraction pipeline.
 
 *** Consider adding tests for pipeline components                     :story:
 
